--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 :root {
 	--index: calc(1vw + 1vh);
 	--text: #e7e7e0;
-	--transition: transform .75s cubic-bezier(.075, .5, 0, 1);
+	/* --transition: transform .75s cubic-bezier(.075, .5, 0, 1); */
 }
 @font-face {
 	font-family: raleway_f;
@@ -54,25 +54,25 @@ body {
 	background-position: center;
 	will-change: transform;
 	z-index: 2;
-	transition: var(--transition);
+	/* transition: var(--transition); */
 }
 .layers__base {
   background-image: url(./assets/img/layer-base.png);
-	transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0);
+	/* transform: translate3d(0, calc(var(--scrollTop) / 1.6), 0); */
 	z-index: 0;
 }
 .layers__middle {
   background-image: url(./assets/img/layer-middle.png);
-	transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
+	/* transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0); */
 }
 .layers__front {
   background-image: url(./assets/img/layer-front.png);
-	transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0);
+	/* transform: translate3d(0, calc(var(--scrollTop) / 5.7), 0); */
 }
 .layer__header {
 	z-index: 1;
-	transform: translate3d(0, calc(var(--scrollTop) / 2), 0);
-	transition: var(--transition);
+	/* transform: translate3d(0, calc(var(--scrollTop) / 2), 0); */
+	/* transition: var(--transition); */
 	will-change: transform;
 	text-transform: uppercase;
 	font-weight: 900;
@@ -90,7 +90,7 @@ body {
 }
 .main-article {
   background-image: url(./assets/img/dungeon.jpg);
-	--main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
+	/* --main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0); */
 	min-height: 100vh;
 	background-size: cover;
 	background-position: center;
@@ -108,16 +108,16 @@ body {
 	text-transform: uppercase;
 	font-size: calc(var(--index) * 1.8);
 	letter-spacing: calc(var(--index) / 7.5);
-	transform: var(--main-article-transform);
-	transition: var(--transition);
+	/* transform: var(--main-article-transform);
+	transition: var(--transition); */
 	will-change: transform;
 }
 .main-article__paragraph {
 	max-width: calc(var(--index) * 30);
 	font-size: calc(var(--index) * .9);
 	margin-top: calc(var(--index) / 1.25);
-	transform: var(--main-article-transform);
-	transition: var(--transition);
+	/* transform: var(--main-article-transform);
+	transition: var(--transition); */
 	will-change: transform;
 }
 .content {
